--- a/org/Pyretechnics.org
+++ b/org/Pyretechnics.org
@@ -389,7 +389,7 @@ The ~grow_fire~ function takes a single =world_state= dictionary as input with t
   |---------------------------+-----------------------------+-------------------------------------------------------------------------------------------+-----------+---------|
   | simulation_shape          | Tuple (int, int, int)       | (num timesteps, num rows, num cols)                                                       |           |         |
   | simulation_resolution     | Tuple (float, float, float) | (minutes per timestep, meters per row, meters per column)                                 |           |         |
-  | simulation_north_angle    | float                       | degrees clockwise from the top of the circle                                              | Yes       | 0.0     |
+  | simulation_north_angle    | float                       | degrees clockwise from the top of the circle [0,360)                                      | Yes       | 0.0     |
   | simulation_stop_condition | Dictionary {string: float}  | either {'max_burn_duration': minutes} or {'max_burned_area': square_meters}               | Yes       | None    |
   | random_seed               | number or string            | the seed value to initialize the random number generator                                  | Yes       | None    |
   | overwrite_outputs         | boolean                     | True or False, whether to mutate or copy the Numpy arrays provided in *output_layer_dict* | Yes       | False   |
@@ -404,7 +404,7 @@ The ~grow_fire~ function takes a single =world_state= dictionary as input with t
   | Parameter Name          | Type  | Units                              |
   |-------------------------+-------+------------------------------------|
   | suppression_timestep    | float | minutes between suppression events |
-  | suppression_coefficient | float | TODO: find units range             |
+  | suppression_coefficient | float | unitless                           |
   |-------------------------+-------+------------------------------------|
 
   - sdi_suppression :: a dictionary of parameter names to their values for the *sdi* suppression algorithm:
@@ -413,46 +413,55 @@ The ~grow_fire~ function takes a single =world_state= dictionary as input with t
   | Parameter Name                                | Type  | Units                              |
   |-----------------------------------------------+-------+------------------------------------|
   | suppression_timestep                          | float | minutes between suppression events |
-  | sdi_sensitivity_to_difficulty                 | float | TODO: find units range             |
-  | sdi_containment_overwhelming_area_growth_rate | float | TODO: find units range             |
-  | sdi_reference_suppression_speed               | float | TODO: find units range             |
+  | sdi_sensitivity_to_difficulty                 | float | unitless                           |
+  | sdi_containment_overwhelming_area_growth_rate | float | hectares/day                       |
+  | sdi_reference_suppression_speed               | float | percent/day                        |
   |-----------------------------------------------+-------+------------------------------------|
 
   - spotting :: a dictionary of parameter names to their values for the spotting algorithm:
 
-  |--------------------+------+-------|
-  | Parameter Name     | Type | Units |
-  |--------------------+------+-------|
-  | TODO: Fill this in |      |       |
-  |--------------------+------+-------|
+  |------------------------------+-------+--------------------------------------------------|
+  | Parameter Name               | Type  | Units                                            |
+  |------------------------------+-------+--------------------------------------------------|
+  | firebrands_per_cell          | int   | number of embers to cast from each spotting cell |
+  | decay_constant               | float | TODO: find units range                           |
+  | mean_distance                | float | TODO: find units range                           |
+  | flin_exp                     | float | TODO: find units range                           |
+  | ws_exp                       | float | TODO: find units range                           |
+  | normalized_distance_variance | float | TODO: find units range                           |
+  | delta_y_sigma                | float | TODO: find units range                           |
+  |------------------------------+-------+--------------------------------------------------|
 
 - input_layer_dict :: a dictionary of layer names to either 2-arity (2D) or 3-arity (3D) functions for accessing the numeric values at each =(y,x)= or =(z,y,x)= coordinate in the simulated space-time cube:
 
-  |-------------------------------+-------+----------------------------------------------------------------+-----------+-------|
-  | Layer Name                    | Type  | Units                                                          | Optional? | Arity |
-  |-------------------------------+-------+----------------------------------------------------------------+-----------+-------|
-  | elevation                     | float | meters                                                         |           |     2 |
-  | slope                         | float | vertical meters/horizontal meters                              |           |     2 |
-  | aspect                        | float | degrees clockwise from North                                   |           |     2 |
-  | fuel_model                    | int   | fuel model numbers 1-256                                       |           |     2 |
-  | canopy_cover                  | float | percent (0-100)                                                |           |     2 |
-  | canopy_height                 | float | meters                                                         |           |     2 |
-  | canopy_base_height            | float | meters                                                         |           |     2 |
-  | canopy_bulk_density           | float | kilograms/meters^3                                             |           |     2 |
-  | suppression_difficulty_index  | float | integer >= 0  (TODO: What is the correct value range?)         | Yes       |     2 |
-  | fuel_spread_adjustment        | float | real number >= 0.0 (1.0 means no adjustment)                   | Yes       |     2 |
-  | temperature                   | float | degrees Celsius                                                |           |     3 |
-  | relative_humidity             | float | percent (0-100)                                                |           |     3 |
-  | wind_speed                    | float | kilometers/hour                                                |           |     3 |
-  | wind_direction                | float | degrees clockwise from North                                   |           |     3 |
-  | fuel_moisture_dead_1hr        | float | percent (0-100)  (TODO: Can these values be greater than 100?) |           |     3 |
-  | fuel_moisture_dead_10hr       | float | percent (0-100)                                                |           |     3 |
-  | fuel_moisture_dead_100hr      | float | percent (0-100)                                                |           |     3 |
-  | fuel_moisture_live_herbaceous | float | percent (0-100)                                                |           |     3 |
-  | fuel_moisture_live_woody      | float | percent (0-100)                                                |           |     3 |
-  | foliar_moisture               | float | percent (0-100)                                                |           |     3 |
-  | weather_spread_adjustment     | float | real number >= 0.0 (1.0 means no adjustment)                   | Yes       |     3 |
-  |-------------------------------+-------+----------------------------------------------------------------+-----------+-------|
+  |--------------------------------------+-------+--------------------------------------------------------+-----------+-------|
+  | Layer Name                           | Type  | Units                                                  | Optional? | Arity |
+  |--------------------------------------+-------+--------------------------------------------------------+-----------+-------|
+  | elevation                            | float | meters                                                 |           |     2 |
+  | slope                                | float | percent [0-100+] (vertical meters/horizontal meters)   |           |     2 |
+  | aspect                               | float | degrees clockwise from North [0-360)                   |           |     2 |
+  | fuel_model                           | int   | fuel model numbers [1-256]                             |           |     2 |
+  | canopy_cover                         | float | percent [0-100]                                        |           |     2 |
+  | canopy_height                        | float | meters                                                 |           |     2 |
+  | canopy_base_height                   | float | meters                                                 |           |     2 |
+  | canopy_bulk_density                  | float | kilograms/meters^3                                     |           |     2 |
+  | suppression_difficulty_index         | float | integer >= 0  (TODO: What is the correct value range?) | Yes       |     2 |
+  | fuel_spread_adjustment               | float | real number >= 0.0 (1.0 means no adjustment)           | Yes       |     2 |
+  | surface_spotting_fire_line_intensity | float | kilowatts/meter                                        | Yes       |     2 |
+  | surface_spotting_percent             | float | percent [0-100]                                        | Yes       |     2 |
+  | crown_spotting_percent               | float | percent [0-100]                                        | Yes       |     2 |
+  | temperature                          | float | degrees Celsius                                        |           |     3 |
+  | relative_humidity                    | float | percent [0-100+]                                       |           |     3 |
+  | wind_speed                           | float | meters/second                                          |           |     3 |
+  | wind_direction                       | float | degrees clockwise from North [0-360)                   |           |     3 |
+  | fuel_moisture_dead_1hr               | float | percent [0-100+] grams moisture/grams ovendry wood     |           |     3 |
+  | fuel_moisture_dead_10hr              | float | percent [0-100+] grams moisture/grams ovendry wood     |           |     3 |
+  | fuel_moisture_dead_100hr             | float | percent [0-100+] grams moisture/grams ovendry wood     |           |     3 |
+  | fuel_moisture_live_herbaceous        | float | percent [0-100+] grams moisture/grams ovendry wood     |           |     3 |
+  | fuel_moisture_live_woody             | float | percent [0-100+] grams moisture/grams ovendry wood     |           |     3 |
+  | foliar_moisture                      | float | percent [0-100+] grams moisture/grams ovendry foliage  |           |     3 |
+  | weather_spread_adjustment            | float | real number >= 0.0 (1.0 means no adjustment)           | Yes       |     3 |
+  |--------------------------------------+-------+--------------------------------------------------------+-----------+-------|
 
 - output_layer_dict :: an *optional* dictionary of layer names to 2D Numpy arrays with the following units to pre-populate the simulation output arrays:
 
@@ -605,7 +614,7 @@ def grow_fire(world_state):
     if config_dict.get("random_seed"):
         random.seed(config_dict.get("random_seed"))
 
-    # RESUME HERE: [[file:~/code/sig-gis/gridfire/src/gridfire/fire_spread.clj::(defn run-fire-spread]]
+    # RESUME HERE: [[file:~/code/sig-gis/gridfire/src/gridfire/fire_spread.clj::(defmulti ^:private run-fire-spread*]]
 
     return None
 
